--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -258,42 +258,6 @@ hr.major {
 }
 
 /* Sidebar */
-#search form {
-  text-decoration: none;
-  position: relative;
-}
-#search form:before {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  text-transform: none !important;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-}
-#search form:before {
-  transform: scaleX(-1);
-  color: #FFFFFF;
-  content: "\f002";
-  cursor: default;
-  display: block;
-  font-size: 1.5em;
-  height: 2em;
-  line-height: 2em;
-  opacity: 0.325;
-  position: absolute;
-  right: 0;
-  text-align: center;
-  top: 0;
-  width: 2em;
-}
-#search form input[type=text] {
-  padding-right: 2.75em;
-}
-
 #sidebar {
   flex-grow: 0;
   flex-shrink: 0;
@@ -302,11 +266,8 @@ hr.major {
   position: relative;
   width: 26em;
 }
-#sidebar h2 {
-  font-size: 2.5em;
-}
 #sidebar > .inner {
-  padding: 2.2222222222em 2.2222222222em 2.4444444444em 2.2222222222em;
+  padding: 1em 0 0 3em;
   position: relative;
   width: 26em;
 }
@@ -322,13 +283,6 @@ hr.major {
   border-bottom: 0;
   margin-bottom: 0;
   padding-bottom: 0;
-}
-#sidebar > .inner > .alt {
-  background-color: #00dcdc;
-  border-bottom: 0;
-  margin: -2.2222222222em 0 4.4444444444em -2.2222222222em;
-  padding: 2.2222222222em;
-  width: calc(100% + 4.4444444444em);
 }
 #sidebar .toggle {
   text-decoration: none;
@@ -382,11 +336,6 @@ hr.major {
   #sidebar > .inner {
     padding: 1.6666666667em 1.6666666667em 1.3333333333em 1.6666666667em;
     width: 24em;
-  }
-  #sidebar > .inner > .alt {
-    margin: -1.6666666667em 0 3.3333333333em -1.6666666667em;
-    padding: 1.6666666667em;
-    width: calc(100% + 3.3333333333em);
   }
   #sidebar .toggle {
     height: 6.25em;
@@ -469,7 +418,7 @@ hr.major {
 #header {
   display: flex;
   flex-direction: column;
-  padding: 1em 0 1em 0;
+  padding: 1em 0 0 0;
   position: relative;
 }
 #header > * {
@@ -492,6 +441,7 @@ hr.major {
   display: flex;
   justify-content: right;
   list-style: none;
+  font-size: 1.1em;
 }
 #header .header_column .header_column_row #menu_header ul li:not(:last-child) {
   margin-right: 2em;
@@ -524,6 +474,9 @@ hr.major {
 #header .header_column_row:last-child {
   flex: 30%;
 }
+#header .header_column_row:last-child:has(> .header_column_row_column) {
+  justify-content: space-evenly;
+}
 #header #menu_inline ul {
   display: flex;
   justify-content: space-evenly;
@@ -531,9 +484,32 @@ hr.major {
   padding: 0;
   background-color: #00E6E6;
 }
-#header #menu_inline ul li {
+#header #menu_inline ul a {
   color: black;
+  text-decoration: none;
+  font-size: 1.2em;
 }
+#header #menu_inline ul a:hover {
+  border-bottom-color: #00E6E6;
+  color: #00B1FF;
+}
+#header #menu_inline ul a:hover strong {
+  color: inherit;
+}
+@media screen and (max-width: 1680px) {
+  #header {
+    padding-top: 2em;
+  }
+}
+@media screen and (max-width: 736px) {
+  #header {
+    padding-top: 3em;
+  }
+  #header #menu_inline {
+    display: none;
+  }
+}
+
 /* Main */
 #main {
   flex-grow: 1;
