--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -9,7 +9,7 @@
 #header {
 	display: flex;
 	flex-direction: column;
-	padding: 1em 0 1em 0;
+	padding: 1em 0 0 0;
 	position: relative;
 
 	> * {
@@ -33,8 +33,7 @@
 				display: flex;
 				justify-content: right;
 				list-style: none;
-				
-
+				font-size: 1.1em;
 				li:not(:last-child) {
 					margin-right: 2em;
 					
@@ -66,7 +65,15 @@
 					border-radius: 5px;
 					background-color: _palette(bg);
 				}
+
 			}
+
+			.header_column_row_column{
+				img{
+			
+				}
+			}
+
 		}
 	}
 	.header_column_row:first-child {
@@ -76,6 +83,10 @@
 	.header_column_row:last-child {
 		flex: 30%;
 	}
+	.header_column_row:last-child:has(> .header_column_row_column) {
+		
+		justify-content: space-evenly;
+	}
 	#menu_inline ul {
 		display: flex;
 		justify-content: space-evenly;
@@ -84,16 +95,33 @@
 		background-color: _palette(bg-alt);
 
 		li {
-			color: black; 
 			// стили для каждого элемента списка
+		}
+		a{
+			color: black;
+			text-decoration: none;
+			
+			font-size: 1.2em;
+			&:hover {
+						border-bottom-color: _palette(accent);
+						color: _palette(accent2) ;
+						strong {
+							color: inherit;
+							
+						}
+					}
 		}
 	}
 
 	@include breakpoint("<=xlarge") {
-		//padding-top: 2em;
+		padding-top: 2em;
 	}
 
 	@include breakpoint("<=small") {
-		//padding-top: 3em;
+		padding-top: 3em;
+
+		#menu_inline{
+			display: none;
+		}
 	}
 }
