--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -6,52 +6,49 @@
 
 /* Sidebar */
 
-	#search {
-		form {
-			@include icon(false, solid);
-			position: relative;
+	// #search {
+	// 	form {
+	// 		@include icon(false, solid);
+	// 		position: relative;
 
-			&:before {
-				transform: scaleX(-1);
-				color: _palette(fg);
-				content: '\f002';
-				cursor: default;
-				display: block;
-				font-size: 1.5em;
-				height: calc(_size(element-height) / 1.375);
-				line-height: calc(_size(element-height) / 1.375);
-				opacity: 0.325;
-				position: absolute;
-				right: 0;
-				text-align: center;
-				top: 0;
-				width: calc(_size(element-height) / 1.375);
-			}
+	// 		&:before {
+	// 			transform: scaleX(-1);
+	// 			color: _palette(fg);
+	// 			content: '\f002';
+	// 			cursor: default;
+	// 			display: block;
+	// 			font-size: 1.5em;
+	// 			height: calc(_size(element-height) / 1.375);
+	// 			line-height: calc(_size(element-height) / 1.375);
+	// 			opacity: 0.325;
+	// 			position: absolute;
+	// 			right: 0;
+	// 			text-align: center;
+	// 			top: 0;
+	// 			width: calc(_size(element-height) / 1.375);
+	// 		}
 
-			input[type="text"] {
-				padding-right: _size(element-height);
-			}
-		}
-	}
+	// 		input[type="text"] {
+	// 			padding-right: _size(element-height);
+	// 		}
+	// 	}
+	// }
 
 	#sidebar {
-		$pad: calc(2em / 0.9);
+		$pad: calc(em / 1.9);
 		flex-grow: 0;
 		flex-shrink: 0;
 		transition: margin-left 0.5s ease,
-						box-shadow 0.5s ease;
+					box-shadow 0.5s ease;
 
 		
 		font-size: 0.9em;
 		position: relative;
 		width: _size(sidebar-width);
 
-		h2 {
-			font-size: calc(2.25em / 0.9);
-		}
-
 		> .inner {
-			@include padding($pad, $pad, (0, 0, $pad, 0));
+		//	@include padding($pad, $pad, (0, 0, $pad, 0));
+			padding: 1em 0 0 3em;
 			position: relative;
 			width: _size(sidebar-width);
 
@@ -71,13 +68,6 @@
 				}
 			}
 
-			> .alt {
-				background-color: darken(_palette(bg-alt), 2);
-				border-bottom: 0;
-				margin: ($pad * -1) 0 ($pad * 2) ($pad * -1);
-				padding: $pad;
-				width: calc(100% + #{$pad * 2});
-			}
 		}
 
 		.toggle {
@@ -124,12 +114,6 @@
 			> .inner {
 				@include padding($pad, $pad, (0, 0, $pad, 0));
 				width: _size(sidebar-width-alt);
-
-				> .alt {
-					margin: ($pad * -1) 0 ($pad * 2) ($pad * -1);
-					padding: $pad;
-					width: calc(100% + #{$pad * 2});
-				}
 			}
 
 			.toggle {
