--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -111,6 +111,13 @@
 						}
 					}
 		}
+		a#active{
+			color: _palette(accent2) ;
+			strong {
+				color: inherit;
+				
+			}
+		}
 	}
 
 	@include breakpoint("<=xlarge") {
