--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,37 +262,47 @@ hr.major {
   flex-grow: 0;
   flex-shrink: 0;
   transition: margin-left 0.5s ease, box-shadow 0.5s ease;
+  background-color: #02282E;
   font-size: 0.9em;
   position: relative;
-  width: 26em;
+  width: 18em;
 }
-#sidebar > .inner {
+#sidebar .inner {
   padding: 1em 0 0 3em;
   position: relative;
-  width: 26em;
+  width: 18em;
 }
-#sidebar > .inner > * {
-  border-bottom: solid 2px #808080;
-  margin: 0 0 3.5em 0;
-  padding: 0 0 3.5em 0;
+#sidebar .inner .major #icon img {
+  width: 100%;
+  height: 100%;
 }
-#sidebar > .inner > * > :last-child {
-  margin-bottom: 0;
+#sidebar .inner #menu {
+  margin-top: 2em;
+  margin-bottom: 2em;
 }
-#sidebar > .inner > *:last-child {
-  border-bottom: 0;
-  margin-bottom: 0;
-  padding-bottom: 0;
+#sidebar .inner #menu a {
+  color: white;
+  text-decoration: none;
+  font-size: 2.2em;
+}
+#sidebar .inner #menu a:hover {
+  border-bottom-color: #00E6E6;
+  color: #00E6E6;
+}
+#sidebar .inner #menu a:hover strong {
+  color: inherit;
+}
+#sidebar .inner #menu a#active {
+  color: #00E6E6;
+}
+#sidebar .inner #menu a#active strong {
+  color: inherit;
 }
 #sidebar .toggle {
-  text-decoration: none;
-  transition: left 0.5s ease;
-  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
-  border: 0;
   display: block;
-  height: 7.5em;
-  left: 26em;
-  line-height: 7.5em;
+  height: 4em;
+  left: 18em;
+  line-height: 4em;
   outline: 0;
   overflow: hidden;
   position: absolute;
@@ -300,23 +310,10 @@ hr.major {
   text-indent: -15em;
   white-space: nowrap;
   top: 0;
-  width: 6em;
+  width: 4em;
   z-index: 10000;
 }
 #sidebar .toggle:before {
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-  text-transform: none !important;
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-}
-#sidebar .toggle:before {
-  content: "\f0c9";
   font-size: 2rem;
   height: inherit;
   left: 0;
@@ -326,20 +323,42 @@ hr.major {
   top: 0;
   width: inherit;
 }
+#sidebar .toggle svg {
+  fill: #808080;
+  display: block;
+  height: 4em;
+  line-height: 4em;
+  outline: 0;
+  overflow: hidden;
+  position: absolute;
+  text-align: center;
+  text-indent: -15em;
+  white-space: nowrap;
+  top: 0;
+  width: 4em;
+  z-index: 10000;
+}
+#sidebar .toggle svg:hover {
+  border-bottom-color: #00E6E6;
+  fill: #00E6E6;
+}
+#sidebar .toggle svg:hover strong {
+  fill: inherit;
+}
 #sidebar.inactive {
-  margin-left: -26em;
+  margin-left: -18em;
 }
 @media screen and (max-width: 1680px) {
   #sidebar {
-    width: 24em;
+    width: 16em;
   }
   #sidebar > .inner {
     padding: 1.6666666667em 1.6666666667em 1.3333333333em 1.6666666667em;
-    width: 24em;
+    width: 16em;
   }
   #sidebar .toggle {
     height: 6.25em;
-    left: 24em;
+    left: 16em;
     line-height: 6.25em;
     text-indent: 5em;
     width: 5em;
@@ -348,7 +367,7 @@ hr.major {
     font-size: 1.5rem;
   }
   #sidebar.inactive {
-    margin-left: -24em;
+    margin-left: -16em;
   }
 }
 @media screen and (max-width: 1280px) {
@@ -494,6 +513,12 @@ hr.major {
   color: #00B1FF;
 }
 #header #menu_inline ul a:hover strong {
+  color: inherit;
+}
+#header #menu_inline ul a#active {
+  color: #00B1FF;
+}
+#header #menu_inline ul a#active strong {
   color: inherit;
 }
 @media screen and (max-width: 1680px) {
