--- a/assets/scss/layout/_sidebar.scss
+++ b/assets/scss/layout/_sidebar.scss
@@ -41,44 +41,60 @@
 		transition: margin-left 0.5s ease,
 					box-shadow 0.5s ease;
 
-		
+		background-color: _palette(bg);
 		font-size: 0.9em;
 		position: relative;
 		width: _size(sidebar-width);
 
-		> .inner {
+		.inner {
 		//	@include padding($pad, $pad, (0, 0, $pad, 0));
 			padding: 1em 0 0 3em;
 			position: relative;
 			width: _size(sidebar-width);
 
-			> * {
-				border-bottom: solid 2px _palette(border);
-				margin: 0 0 (_size(element-margin) * 1.75) 0;
-				padding: 0 0 (_size(element-margin) * 1.75) 0;
+			.major{
 
-				> :last-child {
-					margin-bottom: 0;
+				#icon img {
+					width: 100%; 
+					height: 100%; 
+				  }
+			}	
+
+			#menu {
+				margin-top: 2em;
+				margin-bottom: 2em;
+				a{
+					
+					color: white;
+					text-decoration: none;
+					
+					font-size: 2.2em;
+					&:hover {
+								border-bottom-color: _palette(accent);
+								color: _palette(accent) ;
+								strong {
+									color: inherit;
+									
+								}
+							}
+					
 				}
-
-				&:last-child {
-					border-bottom: 0;
-					margin-bottom: 0;
-					padding-bottom: 0;
+				a#active{
+					color: _palette(accent) ;
+					strong {
+						color: inherit;
+						
+					}
 				}
 			}
-
 		}
 
 		.toggle {
-			@include icon(false, solid);
-			@include vendor('transition', 'left 0.5s ease');
-			-webkit-tap-highlight-color: rgba(255,255,255,0);
-			border: 0;
+
 			display: block;
-			height: 7.5em;
-			left: _size(sidebar-width);
-			line-height: 7.5em;
+			height: 4em;
+			 left: _size(sidebar-width);
+			line-height: 4em;
 			outline: 0;
 			overflow: hidden;
 			position: absolute;
@@ -86,11 +102,11 @@
 			text-indent: -15em;
 			white-space: nowrap;
 			top: 0;
-			width: 6em;
+			width: 4em;
 			z-index: _misc(z-index-base);
 
+
 			&:before {
-				content: '\f0c9';
 				font-size: 2rem;
 				height: inherit;
 				left: 0;
@@ -99,6 +115,31 @@
 				text-indent: 0;
 				top: 0;
 				width: inherit;
+			}
+			svg{
+				fill: _palette(border) ;
+				display: block;
+				height: 4em;
+				//  left: _size(sidebar-width);
+				line-height: 4em;
+				outline: 0;
+				overflow: hidden;
+				position: absolute;
+				text-align: center;
+				text-indent: -15em;
+				white-space: nowrap;
+				top: 0;
+				width: 4em;
+				z-index: _misc(z-index-base);
+
+				&:hover {
+					border-bottom-color: _palette(accent);
+					fill: _palette(accent) ;
+					strong {
+						fill: inherit;
+						
+					}
+				}
 			}
 		}
 
@@ -203,3 +244,19 @@
 			}
 		}
 	}
+
+	// > * {
+	// 	// border-bottom: solid 2px _palette(border);
+	// 	margin: 0 0 (_size(element-margin) * 1.75) 0;
+	// 	padding: 0 0 (_size(element-margin) * 1.75) 0;
+
+	// 	> :last-child {
+	// 		margin-bottom: 0;
+	// 	}
+
+	// 	&:last-child {
+	// 		border-bottom: 0;
+	// 		margin-bottom: 0;
+	// 		padding-bottom: 0;
+	// 	}
+	// }
