--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -249,6 +249,95 @@ hr.major {
   text-align: right;
 }
 
+/* Button */
+input[type=submit],
+input[type=reset],
+input[type=button],
+button,
+.button {
+  background-color: #02282E;
+  border: 0;
+}
+input[type=submit]:hover,
+input[type=reset]:hover,
+input[type=button]:hover,
+button:hover,
+.button:hover {
+  background-color: rgba(0, 230, 230, 0.05);
+}
+input[type=submit]:active,
+input[type=reset]:active,
+input[type=button]:active,
+button:active,
+.button:active {
+  background-color: rgba(0, 230, 230, 0.15);
+}
+input[type=submit].icon:before,
+input[type=reset].icon:before,
+input[type=button].icon:before,
+button.icon:before,
+.button.icon:before {
+  margin-right: 0.5em;
+}
+input[type=submit].fit,
+input[type=reset].fit,
+input[type=button].fit,
+button.fit,
+.button.fit {
+  width: 100%;
+}
+input[type=submit].small,
+input[type=reset].small,
+input[type=button].small,
+button.small,
+.button.small {
+  font-size: 0.6em;
+}
+input[type=submit].large,
+input[type=reset].large,
+input[type=button].large,
+button.large,
+.button.large {
+  font-size: 1em;
+  height: 3.65em;
+  line-height: 3.65em;
+}
+input[type=submit].primary,
+input[type=reset].primary,
+input[type=button].primary,
+button.primary,
+.button.primary {
+  background-color: #00E6E6;
+  box-shadow: none;
+  color: #02282E !important;
+}
+input[type=submit].primary:hover,
+input[type=reset].primary:hover,
+input[type=button].primary:hover,
+button.primary:hover,
+.button.primary:hover {
+  background-color: #00f5f5;
+}
+input[type=submit].primary:active,
+input[type=reset].primary:active,
+input[type=button].primary:active,
+button.primary:active,
+.button.primary:active {
+  background-color: #00d7d7;
+}
+input[type=submit].disabled, input[type=submit]:disabled,
+input[type=reset].disabled,
+input[type=reset]:disabled,
+input[type=button].disabled,
+input[type=button]:disabled,
+button.disabled,
+button:disabled,
+.button.disabled,
+.button:disabled {
+  pointer-events: none;
+  opacity: 0.25;
+}
+
 /* Wrapper */
 #wrapper {
   display: flex;
@@ -299,8 +388,9 @@ hr.major {
   color: inherit;
 }
 #sidebar .toggle {
+  padding-top: 1em;
   display: block;
-  height: 4em;
+  height: 3em;
   left: 18em;
   line-height: 4em;
   outline: 0;
@@ -310,7 +400,7 @@ hr.major {
   text-indent: -15em;
   white-space: nowrap;
   top: 0;
-  width: 4em;
+  width: 3em;
   z-index: 10000;
 }
 #sidebar .toggle:before {
@@ -324,9 +414,10 @@ hr.major {
   width: inherit;
 }
 #sidebar .toggle svg {
+  padding-top: 1em;
   fill: #808080;
   display: block;
-  height: 4em;
+  height: 3em;
   line-height: 4em;
   outline: 0;
   overflow: hidden;
@@ -335,7 +426,7 @@ hr.major {
   text-indent: -15em;
   white-space: nowrap;
   top: 0;
-  width: 4em;
+  width: 3em;
   z-index: 10000;
 }
 #sidebar .toggle svg:hover {
@@ -363,6 +454,20 @@ hr.major {
     text-indent: 5em;
     width: 5em;
   }
+  #sidebar .toggle svg {
+    fill: #808080;
+    display: block;
+    height: 3em;
+    line-height: 4em;
+    outline: 0;
+    overflow: hidden;
+    position: absolute;
+    text-align: center;
+    text-indent: -15em;
+    white-space: nowrap;
+    top: 1em;
+    width: 3em;
+  }
   #sidebar .toggle:before {
     font-size: 1.5rem;
   }
@@ -371,35 +476,24 @@ hr.major {
   }
 }
 @media screen and (max-width: 1280px) {
-  #sidebar {
-    box-shadow: 0 0 5em 0 rgba(0, 0, 0, 0.175);
-    height: 100%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    z-index: 10000;
-  }
-  #sidebar.inactive {
-    box-shadow: none;
-  }
-  #sidebar > .inner {
-    -webkit-overflow-scrolling: touch;
-    height: 100%;
-    left: 0;
-    overflow-x: hidden;
-    overflow-y: auto;
-    position: absolute;
-    top: 0;
-  }
-  #sidebar > .inner:after {
-    content: "";
-    display: block;
-    height: 4em;
-    width: 100%;
-  }
   #sidebar .toggle {
     text-indent: 6em;
     width: 6em;
+    padding-top: 3em;
+  }
+  #sidebar .toggle svg {
+    fill: #808080;
+    display: block;
+    height: 3em;
+    line-height: 4em;
+    outline: 0;
+    overflow: hidden;
+    position: absolute;
+    text-align: center;
+    text-indent: -15em;
+    white-space: nowrap;
+    top: 1em;
+    width: 3em;
   }
   #sidebar .toggle:before {
     font-size: 1.5rem;
@@ -411,22 +505,41 @@ hr.major {
 }
 @media screen and (max-width: 736px) {
   #sidebar .toggle {
-    text-indent: 7.25em;
-    width: 7.25em;
+    text-indent: 5.25em;
+    width: 5.25em;
+    padding-top: 3em;
   }
   #sidebar .toggle:before {
-    color: #FFFFFF;
     margin-left: -0.0625em;
     margin-top: -0.25em;
     font-size: 1.1rem;
     z-index: 1;
   }
+  #sidebar .toggle svg {
+    fill: #808080;
+    display: block;
+    height: 3em;
+    line-height: 4em;
+    outline: 0;
+    overflow: hidden;
+    position: absolute;
+    text-align: center;
+    text-indent: -15em;
+    white-space: nowrap;
+    top: 2.2em;
+    width: 3em;
+  }
+  #sidebar .toggle svg:hover {
+    border-bottom-color: #00E6E6;
+    fill: #00E6E6;
+  }
+  #sidebar .toggle svg:hover strong {
+    fill: inherit;
+  }
   #sidebar .toggle:after {
-    background: rgba(255, 255, 255, 0.75);
-    border-radius: 0.375em;
-    content: "";
+    border: 1px solid #808080;
     height: 3.5em;
-    left: 1em;
+    left: 4em;
     position: absolute;
     top: 1em;
     width: 5em;
@@ -455,11 +568,25 @@ hr.major {
   justify-content: right;
   width: 100%;
   padding-bottom: 1em;
+  fill: #808080;
 }
-#header .header_column .header_column_row #menu_header ul {
+#header .header_column .header_column_row:hover {
+  fill: #00E6E6;
+}
+#header .header_column .header_column_row #menu_header {
+  flex-direction: row;
   display: flex;
   justify-content: right;
   list-style: none;
+  align-items: center;
+  font-size: 1.1em;
+}
+#header .header_column .header_column_row #menu_header ul {
+  flex-direction: row;
+  display: flex;
+  justify-content: right;
+  list-style: none;
+  align-items: center;
   font-size: 1.1em;
 }
 #header .header_column .header_column_row #menu_header ul li:not(:last-child) {
@@ -476,16 +603,27 @@ hr.major {
 #header .header_column .header_column_row #menu_header ul a:hover strong {
   color: inherit;
 }
+#header .header_column .header_column_row #menu_header #loginSVG {
+  margin-right: 1em;
+  align-self: center;
+  width: 1.5em;
+  height: 1.5em;
+}
 #header .header_column .header_column_row #search {
   display: inline-block;
   font-size: 20px;
   width: 100%;
+  height: 2em;
 }
 #header .header_column .header_column_row #search #query {
+  height: 2em;
   width: 100%;
   border: 1px solid #808080;
   border-radius: 5px;
   background-color: #02282E;
+}
+#header .header_column .header_column_row #search #query:focus {
+  border: 0px solid #808080;
 }
 #header .header_column_row:first-child {
   flex: 70%;
@@ -532,6 +670,9 @@ hr.major {
   }
   #header #menu_inline {
     display: none;
+  }
+  #header .header_column .header_column_row #menu_header ul li:not(:last-child) {
+    margin-right: 0.5em;
   }
 }
 
