--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+@import 'fontawesome-all.min.css';
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -142,7 +143,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h1 {
-  font-size: 4em;
+  font-size: 10em;
   margin: 0 0 0.5em 0;
   line-height: 1.3;
 }
@@ -169,17 +170,17 @@ h6 {
 
 @media screen and (max-width: 1680px) {
   h1 {
-    font-size: 3.5em;
+    font-size: 9em;
   }
 }
 @media screen and (max-width: 980px) {
   h1 {
-    font-size: 3.25em;
+    font-size: 8em;
   }
 }
 @media screen and (max-width: 736px) {
   h1 {
-    font-size: 2em;
+    font-size: 6em;
     line-height: 1.4;
   }
   h2 {
@@ -729,5 +730,68 @@ button:disabled,
   }
   #main > .inner > section {
     padding: 3em, 0;
+  }
+}
+
+/* Banner */
+#banner {
+  padding: 0;
+  display: flex;
+  height: 30em;
+  position: relative;
+}
+#banner .title-on-image {
+  position: absolute;
+  bottom: -0.8em;
+  right: -0.4em;
+  opacity: 0.7;
+  text-align: right;
+}
+#banner .content {
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 100%;
+}
+#banner .image {
+  flex-grow: 0;
+  flex-shrink: 0;
+  display: block;
+  margin: 0 0 0 0;
+  width: 100%;
+  height: 100%;
+}
+#banner .image img {
+  height: 100%;
+  -moz-object-fit: cover;
+  -webkit-object-fit: cover;
+  -ms-object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -moz-object-position: center;
+  -webkit-object-position: center;
+  -ms-object-position: center;
+  -o-object-position: center;
+     object-position: center;
+  width: 100%;
+}
+@media screen and (orientation: portrait) {
+  #banner .content {
+    flex-grow: 0;
+    flex-shrink: 0;
+    width: 100%;
+  }
+  #banner .image {
+    flex-grow: 0;
+    flex-shrink: 0;
+    margin: 0 0 4em 0;
+    height: 100%;
+    max-height: 50vh;
+    min-height: 18em;
+    width: 100%;
+  }
+}
+@media screen and (orientation: portrait) and (max-width: 480px) {
+  #banner .image {
+    max-height: 35vh;
   }
 }/*# sourceMappingURL=main.css.map */
