--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ html {
 }
 
 body {
-  background: var(--palette-bg);
+  background-color: #02282E;
 }
 body.is-preload *, body.is-resizing * {
   animation: none !important;
@@ -95,7 +95,7 @@ body.is-preload *:before, body.is-preload *:after, body.is-resizing *:before, bo
 /* Type */
 body, input, select, textarea {
   color: #FFFFFF;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 13pt;
   font-weight: 400;
   line-height: 1.65;
@@ -131,7 +131,7 @@ p {
 
 h1, h2, h3, h4, h5, h6 {
   color: #FFFFFF;
-  font-family: "Roboto Slab", serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 700;
   line-height: 1.5;
   margin: 0 0 1em 0;
@@ -143,9 +143,9 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h1 {
-  font-size: 10em;
+  font-size: 13em;
   margin: 0 0 0.5em 0;
-  line-height: 1.3;
+  line-height: 0.8;
 }
 
 h2 {
@@ -170,21 +170,33 @@ h6 {
 
 @media screen and (max-width: 1680px) {
   h1 {
-    font-size: 9em;
+    font-size: 12em;
   }
 }
 @media screen and (max-width: 980px) {
   h1 {
-    font-size: 8em;
+    font-size: 11em;
   }
 }
 @media screen and (max-width: 736px) {
   h1 {
-    font-size: 6em;
-    line-height: 1.4;
+    font-size: 12em;
+    line-height: 0.8;
   }
   h2 {
     font-size: 1.5em;
+  }
+}
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 8.5em;
+    line-height: 0.8;
+  }
+}
+@media screen and (max-width: 360px) {
+  h1 {
+    font-size: 7.5em;
+    line-height: 0.8;
   }
 }
 sub {
@@ -337,6 +349,117 @@ button:disabled,
 .button:disabled {
   pointer-events: none;
   opacity: 0.25;
+}
+
+/* Posts */
+.posts {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 0 2em -6em;
+  width: calc(100% + 6em);
+}
+.posts article {
+  flex-grow: 0;
+  flex-shrink: 1;
+  margin: 0 0 6em 6em;
+  position: relative;
+  width: calc(33.3333333333% - 6em);
+}
+.posts article > :last-child {
+  margin-bottom: 0;
+}
+.posts article .image {
+  display: block;
+  margin: 0 0 2em 0;
+}
+.posts article .image img {
+  display: block;
+  width: 100%;
+}
+@media screen and (min-width: 1681px) {
+  .posts article:nth-child(3n+1):before {
+    display: none;
+  }
+  .posts article:nth-child(3n+1):after {
+    width: 100%;
+  }
+  .posts article:nth-last-child(1), .posts article:nth-last-child(2), .posts article:nth-last-child(3) {
+    margin-bottom: 0;
+  }
+  .posts article:nth-last-child(1):before, .posts article:nth-last-child(2):before, .posts article:nth-last-child(3):before {
+    height: 100%;
+  }
+  .posts article:nth-last-child(1):after, .posts article:nth-last-child(2):after, .posts article:nth-last-child(3):after {
+    display: none;
+  }
+}
+@media screen and (max-width: 1680px) {
+  .posts article {
+    width: calc(50% - 6em);
+  }
+  .posts article:nth-last-child(3) {
+    margin-bottom: 6em;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 1680px) {
+  .posts article:nth-child(2n+1):before {
+    display: none;
+  }
+  .posts article:nth-child(2n+1):after {
+    width: 100%;
+  }
+  .posts article:nth-last-child(1), .posts article:nth-last-child(2) {
+    margin-bottom: 0;
+  }
+  .posts article:nth-last-child(1):before, .posts article:nth-last-child(2):before {
+    height: 100%;
+  }
+  .posts article:nth-last-child(1):after, .posts article:nth-last-child(2):after {
+    display: none;
+  }
+}
+@media screen and (max-width: 736px) {
+  .posts {
+    margin: 0 0 2em -4.5em;
+    width: calc(100% + 4.5em);
+  }
+  .posts article {
+    margin: 0 0 4.5em 4.5em;
+    width: calc(50% - 4.5em);
+  }
+  .posts article:before {
+    height: calc(100% + 4.5em);
+    left: -2.25em;
+  }
+  .posts article:after {
+    bottom: -2.25em;
+    width: calc(100% + 4.5em);
+  }
+  .posts article:nth-last-child(3) {
+    margin-bottom: 4.5em;
+  }
+}
+@media screen and (max-width: 480px) {
+  .posts {
+    margin: 0 0 2em 0;
+    width: 100%;
+  }
+  .posts article {
+    margin: 0 0 4.5em 0;
+    width: 100%;
+  }
+  .posts article:before {
+    display: none;
+  }
+  .posts article:after {
+    width: 100%;
+  }
+  .posts article:last-child {
+    margin-bottom: 0;
+  }
+  .posts article:last-child:after {
+    display: none;
+  }
 }
 
 /* Wrapper */
@@ -566,6 +689,7 @@ button:disabled,
 #header .header_column .header_column_row {
   display: flex;
   flex-direction: row;
+  align-items: center;
   justify-content: right;
   width: 100%;
   padding-bottom: 1em;
@@ -601,7 +725,24 @@ button:disabled,
 #header .header_column .header_column_row #menu_header ul a:hover strong {
   color: inherit;
 }
-#header .header_column .header_column_row #menu_header #loginSVG {
+#header .header_column .header_column_row #menu_login {
+  flex-direction: row;
+  display: flex;
+  justify-content: right;
+  font-size: 1.2em;
+}
+#header .header_column .header_column_row #menu_login a {
+  color: #808080;
+  text-decoration: none;
+}
+#header .header_column .header_column_row #menu_login a:hover {
+  border-bottom-color: #00E6E6;
+  color: #00E6E6;
+}
+#header .header_column .header_column_row #menu_login a:hover strong {
+  color: inherit;
+}
+#header .header_column .header_column_row #menu_login #loginSVG {
   margin-right: 1em;
   align-self: center;
   width: 1.5em;
@@ -685,7 +826,30 @@ button:disabled,
   #header #menu_inline {
     display: none;
   }
+  #header .header_column .header_column_row #menu_header ul {
+    font-size: 0.9em;
+  }
   #header .header_column .header_column_row #menu_header ul li:not(:last-child) {
+    margin-right: 0.5em;
+  }
+  #header .header_column .header_column_row #menu_login ul {
+    font-size: 0.8em;
+  }
+  #header .header_column .header_column_row #menu_login ul li:not(:last-child) {
+    margin-right: 0.5em;
+  }
+}
+@media screen and (max-width: 480px) {
+  #header .header_column {
+    flex-direction: column;
+  }
+  #header .header_column .header_column_row #menu_header ul {
+    display: none;
+  }
+  #header .header_column .header_column_row #menu_login ul {
+    font-size: 0.9em;
+  }
+  #header .header_column .header_column_row #menu_login ul li:not(:last-child) {
     margin-right: 0.5em;
   }
 }
@@ -703,7 +867,6 @@ button:disabled,
 }
 #main > .inner > section {
   padding: 0, 6em;
-  border-top: solid 2px #808080;
 }
 #main > .inner > section:first-of-type {
   border-top: 0 !important;
@@ -742,8 +905,8 @@ button:disabled,
 }
 #banner .title-on-image {
   position: absolute;
-  bottom: -0.8em;
-  right: -0.4em;
+  bottom: -0.55em;
+  right: -0.36em;
   opacity: 0.7;
   text-align: right;
 }
@@ -792,6 +955,6 @@ button:disabled,
 }
 @media screen and (orientation: portrait) and (max-width: 480px) {
   #banner .image {
-    max-height: 35vh;
+    max-height: 50vh;
   }
 }/*# sourceMappingURL=main.css.map */
