--- a/assets/scss/base/_page.scss
+++ b/assets/scss/base/_page.scss
@@ -8,12 +8,13 @@
 // MSIE: Prevents scrollbar from overlapping content.
     body {
         -ms-overflow-style: scrollbar;
+       
     }
 
 // Ensures page width is always >=320px.
     @include breakpoint('<=xsmall') {
         html, body {
-            min-width: 320px;
+             min-width: 320px;
         }
     }
 
@@ -28,8 +29,7 @@
     }
 
 body {
-    background: var(--palette-bg);
-
+    background-color: _palette(bg);
     // Stops initial animations until page loads or stops resizing.
     &.is-preload, 
     &.is-resizing {
