--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -1,8 +1,3 @@
-///
-/// Editorial by HTML5 UP
-/// html5up.net | @ajlkn
-/// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-///
 
 /* Type */
 
@@ -72,9 +67,9 @@
 	}
 
 	h1 {
-		font-size: 10em;
+		font-size: 13em;
 		margin: 0 0 (_size(element-margin) * 0.25) 0;
-		line-height: 1.3;
+		line-height: 0.8;
 	}
 
 	h2 {
@@ -99,26 +94,41 @@
 
 	@include breakpoint('<=xlarge') {
 		h1 {
-			font-size: 9em;
+			font-size: 12em;
 		}
 	}
 
 	@include breakpoint('<=medium') {
 		h1 {
-			font-size: 8em;
+			font-size: 11em;
 		}
 	}
 
 	@include breakpoint('<=small') {
 		h1 {
-			font-size: 6em;
-			line-height: 1.4;
+			font-size: 12em;
+			line-height: 0.8;
 		}
 
 		h2 {
 			font-size: 1.5em;
 		}
 	}
+
+	@include breakpoint('<=xsmall') {
+		h1 {
+			font-size: 8.5em;
+			line-height: 0.8;
+		}
+	}
+	
+	@include breakpoint('<=xxsmall') {
+		h1 {
+			font-size: 7.5em;
+			line-height: 0.8;
+		}
+	}
+
 
 	sub {
 		font-size: 0.8em;
