--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,8 @@
 // Component.
 @import 'components/button';
 @import 'components/posts';
+@import 'components/actions';
+@import 'components/mashroom_list';
 
 // Layout.
 
