--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -268,8 +268,12 @@ input[type=reset],
 input[type=button],
 button,
 .button {
-  background-color: #02282E;
+  background-color: #00E6E6;
   border: 0;
+  text-decoration: none;
+  color: #02282E;
+  font-weight: 700;
+  padding: 0.5em 1em 0.5em 1em;
 }
 input[type=submit]:hover,
 input[type=reset]:hover,
@@ -361,6 +365,7 @@ button:disabled,
 .posts article {
   flex-grow: 0;
   flex-shrink: 1;
+  flex-basis: 40%;
   margin: 0 0 6em 6em;
   position: relative;
   width: calc(33.3333333333% - 6em);
@@ -398,7 +403,7 @@ button:disabled,
     width: calc(50% - 6em);
   }
   .posts article:nth-last-child(3) {
-    margin-bottom: 6em;
+    margin-bottom: 1em;
   }
 }
 @media screen and (min-width: 481px) and (max-width: 1680px) {
@@ -462,6 +467,64 @@ button:disabled,
   }
 }
 
+/* Actions */
+ul.actions {
+  display: flex;
+  cursor: default;
+  list-style: none;
+  margin-left: -1em;
+  padding-left: 0;
+}
+ul.actions li {
+  padding: 0 0 0 1em;
+  vertical-align: middle;
+}
+ul.actions.special {
+  justify-content: center;
+  width: 100%;
+  margin-left: 0;
+}
+ul.actions.special li:first-child {
+  padding-left: 0;
+}
+ul.actions.stacked {
+  flex-direction: column;
+  margin-left: 0;
+}
+ul.actions.stacked li {
+  padding: 1.3em 0 0 0;
+}
+ul.actions.stacked li:first-child {
+  padding-top: 0;
+}
+ul.actions.fit {
+  width: calc(100% + 1em);
+}
+ul.actions.fit li {
+  flex-grow: 1;
+  flex-shrink: 1;
+  width: 100%;
+}
+ul.actions.fit li > * {
+  width: 100%;
+}
+ul.actions.fit.stacked {
+  width: 100%;
+}
+
+.mashroom_list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 1em 0em 1em 0em;
+}
+.mashroom_list ul {
+  margin: 1em 1em;
+}
+.mashroom_list img {
+  max-width: 100%;
+  height: 10em;
+}
 /* Wrapper */
 #wrapper {
   display: flex;
