--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -30,6 +30,7 @@
 @import 'components/posts';
 @import 'components/actions';
 @import 'components/mashroom_list';
+@import 'components/mashroom_store';
 
 // Layout.
 
