--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -58,6 +58,7 @@
 		font-weight: _font(weight-heading);
 		line-height: 1.5;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
+		text-transform: uppercase;
 
 		a {
 			color: inherit;
@@ -73,7 +74,8 @@
 	}
 
 	h2 {
-		font-size: 1.75em;
+		font-size: 5em;
+		margin: 0;
 	}
 
 	h3 {
@@ -111,7 +113,7 @@
 		}
 
 		h2 {
-			font-size: 1.5em;
+			font-size: 3em;
 		}
 	}
 
