--- a/assets/scss/layout/_banner.scss
+++ b/assets/scss/layout/_banner.scss
@@ -9,7 +9,6 @@
 	#banner {
 		padding: 0;
 		display: flex;
-		height: 30em;
 		position: relative;
 
 		.title-on-image {
@@ -26,6 +25,29 @@
 			width: 100%;
 		}
 
+		.store_content{
+			display: flex;
+			flex-direction: row;
+			background-color: white;
+			justify-content: space-evenly;
+			align-items: stretch;
+			width: 100%;
+			flex-grow: 1;
+			flex-shrink: 1;
+			color: black;
+
+
+			h3{
+				color: black;
+				
+			}
+
+			article{
+				margin: 1em;
+				width: 50%;
+			}
+		}
+
 		.image {
 			flex-grow: 0;
 			flex-shrink: 0;
@@ -33,6 +55,7 @@
 			margin: 0 0 0 0;
 			width: 100%;
 			height: 100%;
+			max-height: 30em;
 
 			img {
 				height: 100%;
@@ -48,6 +71,17 @@
 			}
 		}
 
+		@include breakpoint('<=small'){
+			.store_content{
+				flex-direction: column;
+
+				article{
+					width: 90%;
+				}
+			}
+
+		}
+
 		@include orientation(portrait) {
 			//flex-direction: column-reverse;
 
@@ -60,7 +94,7 @@
 			.image {
 				flex-grow: 0;
 				flex-shrink: 0;
-				margin: 0 0 (_size(element-margin) * 2) 0;
+				margin: 0 0 0 0;
 				height:100%;
 				max-height: 50vh;
 				min-height: 18em;
@@ -72,6 +106,8 @@
 				.image {
 					max-height: 50vh;
 				}
+
+				
 			}
 		}
 	}
