--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -119,6 +119,7 @@
 				display: flex;
 				flex-direction: row;
 				margin-left: 1.5em;
+				align-items: center;
 
 				.circle {
 					margin-left: 0.5em;
